# LibCMaker_SQLiteModernCPP

./: .appveyor.yml  .travis.yml  README.md  cmr_build_sqlitemoderncpp.cmake
ci/: ci_install_packages.sh  ci_lib_params.sh
cmake/: cmr_build_rules_sqlitemoderncpp.cmake  cmr_find_package_sqlitemoderncpp.cmake  cmr_get_download_params_sqlitemoderncpp.cmake
cmake/modules/: FindSQLiteModernCPP.cmake
patch/SQLiteModernCPP/: CMakeLists.txt
samples/TestCompileWithSQLiteModernCPP/: CMakeLists.txt  README.md  check_if_table_and_column_of_table_exists.cpp
samples/TestCompileWithSQLiteModernCPP/src/: example_test.cpp
samples/TestCompileWithSQLiteModernCPP/test/: CMakeLists.txt
samples/ci_sample/: CMakeLists.txt  README.md
samples/ci_sample/src/: check_if_table_and_column_of_table_exists.cpp  example.cpp  example_test.cpp
samples/ci_sample/test/: CMakeLists.txt
